# rust-api-dictionary

./: .env  Cargo.toml  README.md
assets/: dictionary_es.csv
src/: main.rs
src/assets/: Dictionary_es.csv
src/commons/: dependency.rs  utils.rs
src/commons/configuration/: configuration.rs  diccionary.rs
src/commons/log/: log_service.rs  logger.rs
src/domain/: collection.rs  collection_key.rs  event_log.rs  word.rs  word_collection.rs  word_collection_memory.rs
src/infrastructure/: controller_word.rs  word_collection_memory.rs
src/infrastructure/dto/: dto_anonymous_collection.rs  dto_collection.rs  dto_word.rs  dto_word_lite.rs
src/infrastructure/log/: logger_console.rs
src/infrastructure/modules/: combo_permuter.rs  permute_combo.rs  rae_raider.rs
