[package]
name = "spn-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
csv = "1.1"
rand = "0.8.5"
scraper = "0.16.0"
regex = "1"
ego-tree = "0.6.2"
rocket = "=0.5.0-rc.3"
once_cell = "1.17.2"
lazy_static = "1.4.0"
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
futures = { version = "0.3", features = ["compat"] }
tokio = { version = "1", features = ["full"] }